--- a/ApiCrudDepartamentos/appsettings.json
+++ b/ApiCrudDepartamentos/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenahospital": "Data Source=LOCALHOST;Initial Catalog=HOSPITAL;Persist Security Info=True;User ID=SA;Password=MCSD2020"
+    "cadenahospital": "Data Source=servidorprofe.database.windows.net;Initial Catalog=AZURETAJAMAR;Persist Security Info=True;User ID=adminsql;Password=Admin123"
   }
 }
