--- a/ApiCrudDepartamentos/appsettings.json
+++ b/ApiCrudDepartamentos/appsettings.json
@@ -8,6 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenahospital": "Data Source=servidorprofe.database.windows.net;Initial Catalog=AZURETAJAMAR;Persist Security Info=True;User ID=adminsql;Password=Admin123"
+    "cadenahospital": "Data Source=sqlxamarin.database.windows.net;Initial Catalog=HOSPITALXAMARIN;Persist Security Info=True;User ID=adminsql;Password=Admin123",
+    "cadenahospitalLOCAL": "Data Source=LOCALHOST;Initial Catalog=HOSPITAL;Persist Security Info=True;User ID=SA;Password=MCSD2021",
+    "cadenahospitalAZURE": "Data Source=sqlxamarin.database.windows.net;Initial Catalog=HOSPITALXAMARIN;Persist Security Info=True;User ID=adminsql;Password=Admin123"
   }
 }
